feat: fix issued cors when deploy

--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -1,7 +1,8 @@
 spring.application.name=elevator_simulator
 server.servlet.context-path=/apis
 
-elevator.cors.allowed-origins=${ELEVATOR_CORS_ALLOWED_ORIGIN:http://localhost:5173}
+#local dev elevator.cors.allowed-origins=${ELEVATOR_CORS_ALLOWED_ORIGIN:http://localhost:5173}
+elevator.cors.allowed-origins=${ELEVATOR_CORS_ALLOWED_ORIGIN:https://elevator-simulator-ui.vercel.app}
 elevator.cors.allowed-methods=${ELEVATOR_CORS_ALLOWED_METHODS:GET,POST,PUT,DELETE}
 elevator.cors.allowed-headers=${ELEVATOR_CORS_ALLOWED_HEADERS:*}
 elevator.cors.allow-credentials=${ELEVATOR_CORS_ALLOW_CREDENTIALS:true}
